<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.uprcfido.MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:id="@+id/textView4"
        app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="25dp" android:layout_marginStart="16dp"/>
    <EditText
        android:id="@+id/et_username"
        android:layout_width="323dp"
        android:layout_height="45dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/server"
        android:id="@+id/textView5"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="24dp" android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/et_server"/>


    <EditText
        android:id="@+id/et_server"
        android:layout_width="368dp"
        android:layout_height="45dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="44dp" app:layout_constraintTop_toBottomOf="@+id/btn_setBAA"
        app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.488"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/server_response"
        android:id="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/scrollView2" android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_reg"/>
    <ScrollView
        android:layout_width="373dp"
        android:layout_height="134dp"
        android:id="@+id/scrollView2" android:layout_marginTop="14dp"
        app:layout_constraintTop_toBottomOf="@+id/textView6" app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="24dp" android:layout_marginEnd="24dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_serverResponse"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_dereg"
        android:layout_width="128dp"
        android:layout_height="46dp"
        android:layout_marginTop="11dp"
        android:onClick="dererister"
        android:text="@string/deregister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_auth"
        app:layout_constraintTop_toBottomOf="@+id/et_server" />
    <Button
        android:id="@+id/btn_auth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/authenticate"
        android:onClick="authenticate"
        android:layout_marginTop="11dp"
        app:layout_constraintTop_toBottomOf="@+id/et_server" app:layout_constraintStart_toEndOf="@+id/btn_reg"
        app:layout_constraintEnd_toStartOf="@+id/btn_dereg" android:layout_marginEnd="5dp"
        />

    <Button
        android:id="@+id/btn_reg"
        android:layout_width="111dp"
        android:layout_height="49dp"
        android:onClick="register"
        android:text="@string/register"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_auth"
        app:layout_constraintEnd_toStartOf="@+id/btn_auth"
        app:layout_constraintStart_toStartOf="parent" />
    <Button
        android:id="@+id/btn_setIDC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_local_fido"
        android:onClick="setIDCFido"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        android:layout_marginStart="8dp" android:layout_marginBottom="9dp"
        app:layout_constraintBottom_toTopOf="@+id/textView5"/>
    <Button
        android:id="@+id/btn_setBAA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_public_fido"
        android:onClick="setBAAFido"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/et_username" android:layout_marginEnd="25dp"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_ct"
        android:layout_width="138dp"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="35dp"
        android:text="@string/clear_fields"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />
    <Button
        android:text="@string/clear_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:id="@+id/btn_cd"
        android:layout_marginEnd="24dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="35dp"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2"/>


</androidx.constraintlayout.widget.ConstraintLayout>
